@@ -1,3 +1,10 @@
+2007-11-10  Jens Granseuer  <jensgr@gmx.net>
+
+	* gnome-about-me-password.c: (authenticated_user),
+	(io_watch_stdout): don't get confused when the user does not have a
+	password set and passwd immediately asks for the new one. This resulted
+	in an endless loop up to now (bug #336872)
+
 2007-11-03  Jens Granseuer  <jensgr@gmx.net>
 
 	* gnome-about-me-password.c: (io_watch_stdout): add another string to
